--- a/Spring Boot/book-info-service/pom.xml
+++ b/Spring Boot/book-info-service/pom.xml
@@ -29,6 +29,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180813</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-books</artifactId>
+			<version>v1-rev106-1.25.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
